--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Réponse de l'API</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type ="text/css" href="/asset/style.css">
+    <title>Groupie Tracker</title>
 </head>
 <body>
-    <h1>Contenu de l'API:</h1>
-    <p onclick ="getAPIContent('')">GET ALL</p>
-    <button onclick="getAPIContent('artists')">Artistes</button>
-    <button onclick="getAPIContent('dates')">Dates</button>
-    <button onclick="getAPIContent('locations')">Locations</button>
-    <div id="apiContent"></div>
+    <div class="header">
+        <img src="/asset/img/logo.png" alt="logo" style="width: 100%; height:50%;">
+        <h1>Groupie Tracker</h1>
+        <p>Track your favorite bands and artists</p>
+        <div class="search_bar">
+            <form action="/search" method="GET">
+                <input type="text" name="search" placeholder="Search for a band or artist">
+                <input type="submit" value="Search">
+            </form>
+        </div>
+    </div>
 
-    <script>
-        function getAPIContent(key) {
-            fetch('/' + key)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('apiContent').innerHTML = data;
-                })
-                .catch(error => {
-                    console.error('Erreur lors de la récupération des données:', error);
-                });
-        }
-    </script>
+<div class="container">
+{{range .}}
+    <div class="rep">
+        <img src="{{.Image}}" alt="{{.Name}}" style="max-width: 40%; max-height: 40%;">
+        <h3>{{.Name}}</h3>
+        <p>Members:</p>
+        <ul>
+            {{range .Members}}
+                <li>{{.}}</li>
+            {{end}}
+        </ul>
+        <p>Creation Date: {{.CreationDate}}</p>
+        <p>First Album: {{.FirstAlbum}}</p>
+    </div>
+{{else}}
+    <p>No matching artists found.</p>
+{{end}}
+</div>
 </body>
 </html>
