--- a/index.html
+++ b/index.html
@@ -1,55 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type ="text/css" href="/asset/style.css">
-    <title>Groupie Tracker</title>
-</head>
-<body>
-    <div class="header">
-        <img src="/asset/img/logo.png" alt="logo" style="width: 100%; height:50%;">
-        <h1>Groupie Tracker</h1>
-        <p>Track your favorite bands and artists</p>
-        <div class="search_bar">
-            <form action="/search" method="GET">
-                <input type="text" name="search" placeholder="Search for a band or artist">
-                <input type="submit" value="Search">
-            </form>
-        </div>
-        <div class="filter_date">
-            <form action="/filtre" method="GET">
-                <label for="date-range">Sélectionnez une date de concert :</label>
-                <input type="date" id="filtre" name="filtre" value="04-02-2024" min="01-01-1950" max="31-12-2025">            
-                <input type="submit" value="Filtrer">
-            </form>  
-        </div>  
-        <form action="/localisation" method="GET">
-            <div class="filter-geo">
-                <label for="filter-range">Chercher un lieu : </label>
-                <input type="search" name="geo"  id="geo-search" placeholder="Search for a localisation ..." />
-                <input type="submit" value="Filtrer">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type ="text/css" href="/asset/style.css">
+        <title>Groupie Tracker</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="/asset/suggestionsbyname.js"></script>
+        <script src="/asset/suggestionbygeo.js"></script>
+    </head>
+    <body>
+            <div class="header">
+                <img src="/asset/img/logo.png" alt="logo" style="width: 100%; height:200px;">
+                <h1>Groupie Tracker</h1>
+                <p>Track your favorite bands and artists</p>
             </div>
-        </form>
-    </div>
+            <div class="filtre">
+                <form action="/search" method="GET">
+                    <div class="sug">
+                        <input type="text" action="/search" name="search" placeholder="Search for a band or artist" id="autocomplete">
+                        <ul id="suggestions"></ul>
+                    </div>
+                    <input type="date" name="filtre" value="04-02-2024" min="01-01-1950" max="31-12-2025">
+                    <div class="geo">
+                        <input type="search" name="localisation" placeholder="Search for a location ..." id="autocompletegeo">
+                        <ul id="suggestionsloc"></ul>
+                    </div>
+                    <label for="alpha">Ordre alphabétique</label>
+                    <input type="checkbox" id="ordre_alpha" name="alpha" />
+                    <hr>
+                    <label for="concert">Concert les plus récents</label>
+                    <input type="checkbox" id="concert_récent" name="concert" />
+                    <hr>
+                    <label for="yearRange">Année de création (plage) :</label>
+                    <input type="range" id="year" name="year" min="1961" max="2009" value="" oninput="updateyear(this.value)">
+                    <span id="yeardisplay"></span>
+                    <label for="members">Nombre de membres :</label><br>
+                    <input type="radio" id="member1" name="members" value="1">
+                    <label for="member1">1</label><br>
+                    <input type="radio" id="member2" name="members" value="2">
+                    <label for="member2">2</label><br>
+                    <input type="radio" id="member3" name="members" value="3">
+                    <label for="member3">3</label><br>
+                    <input type="radio" id="member4" name="members" value="4">
+                    <label for="member4">4</label><br>
+                    <input type="radio" id="member5" name="members" value="5">
+                    <label for="member5">5</label><br>
+                    <input type="radio" id="member6" name="members" value="6">
+                    <label for="member6">6</label><br>
+                    <input type="radio" id="member7" name="members" value="7">
+                    <label for="member7">7</label><br>
+                    <input type="submit" value="Search">
+                </form>
+            </div>
+            <script>
+                function updateyear(value) {
+                document.getElementById('yeardisplay').innerText = value;
+                }
+            </script>
 
-<div class="container">
-{{range .}}
-    <div class="rep">
-        <img src="{{.Image}}" alt="{{.Name}}" style="max-width: 40%; max-height: 40%;">
-        <h3>{{.Name}}</h3>
-        <p>Members:</p>
-        <ul>
-            {{range .Members}}
-                <li>{{.}}</li>
-            {{end}}
-        </ul>
-        <p>Creation Date: {{.CreationDate}}</p>
-        <p>First Album: {{.FirstAlbum}}</p>
-    </div>
-{{else}}
-    <p>No matching artists found.</p>
-{{end}}
-</div>
-</body>
+        <div class="container">
+        {{range .}}
+            <div class="rep">
+                <img src="{{.Image}}" alt="{{.Name}}" style="max-width: 60%; max-height: 60%;">
+                <h3>{{.Name}}</h3>
+                <p>Creation Date: {{.CreationDate}}</p>
+                <p>First Album: {{.FirstAlbum}}</p>
+            </div>
+        {{else}}
+            <p>No matching artists found.</p>
+        {{end}}
+        </div>
+    </body>
 </html>
