--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <input type="text" action="/search" name="search" placeholder="Search for a band or artist" id="autocomplete">
                         <ul id="suggestions"></ul>
                     </div>
-                    <input type="date" name="filtre" value="04-02-2024" min="01-01-1950" max="31-12-2025">
+                    <input type="date" name="filtre" value="27-02-2024" min="01-01-1950" max="31-12-2025">
                     <div class="geo">
                         <input type="search" name="localisation" placeholder="Search for a location ..." id="autocompletegeo">
                         <ul id="suggestionsloc"></ul>
@@ -33,7 +33,7 @@
                     <input type="checkbox" id="concert_récent" name="concert" />
                     <hr>
                     <label for="yearRange">Année de création (plage) :</label>
-                    <input type="range" id="year" name="year" min="1961" max="2009" value="" oninput="updateyear(this.value)">
+                    <input type="range" id="year" name="year" min="1950" max="2020" value="1950" oninput="updateyear(this.value)">
                     <span id="yeardisplay"></span>
                     <label for="members">Nombre de membres :</label><br>
                     <input type="radio" id="member1" name="members" value="1">
@@ -50,12 +50,16 @@
                     <label for="member6">6</label><br>
                     <input type="radio" id="member7" name="members" value="7">
                     <label for="member7">7</label><br>
-                    <input type="submit" value="Search">
+                    <input type="date"  id="f_album" name="first_album" value="27-02-2024" min="01-01-1960" max="31-12-2025">
+                    <input type="submit" id="button" value="Search">
                 </form>
             </div>
             <script>
                 function updateyear(value) {
-                document.getElementById('yeardisplay').innerText = value;
+                    // Mettre à jour le texte dans l'élément <span>
+                    var span = document.getElementById("yeardisplay");
+                    var displayValue = parseInt(value) + 1; // Ajouter 1 à la valeur pour afficher à partir de 1961
+                    span.textContent = displayValue;
                 }
             </script>
 
