--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <input type="text" action="/search" name="search" placeholder="Search for a band or artist" id="autocomplete">
                         <ul id="suggestions"></ul>
                     </div>
+                    <label for="filtre">Date de concert :</label>
                     <input type="date" name="filtre" value="27-02-2024" min="01-01-1950" max="31-12-2025">
                     <div class="geo">
                         <input type="search" name="localisation" placeholder="Search for a location ..." id="autocompletegeo">
@@ -50,6 +51,7 @@
                     <label for="member6">6</label><br>
                     <input type="radio" id="member7" name="members" value="7">
                     <label for="member7">7</label><br>
+                    <label for="filtre">Date du premier album :</label>
                     <input type="date"  id="f_album" name="first_album" value="27-02-2024" min="01-01-1960" max="31-12-2025">
                     <input type="submit" id="button" value="Search">
                 </form>
