--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                         <input type="text" action="/search" name="search" placeholder="Search for a band or artist" id="autocomplete">
                         <ul id="suggestions"></ul>
                     </div>
-                    <input type="date" name="filtre" value="27-02-2024" min="01-01-1950" max="31-12-2025">
                     <div class="geo">
                         <input type="search" name="localisation" placeholder="Search for a location ..." id="autocompletegeo">
                         <ul id="suggestionsloc"></ul>
@@ -50,7 +49,12 @@
                     <label for="member6">6</label><br>
                     <input type="radio" id="member7" name="members" value="7">
                     <label for="member7">7</label><br>
-                    <input type="date"  id="f_album" name="first_album" value="27-02-2024" min="01-01-1960" max="31-12-2025">
+                    <div class="date-row">
+                        <label for="date">Date de concert :</label>
+                        <input type="date" name="filtre" value="27-02-2024" min="01-01-1950" max="31-12-2025">
+                        <label for="date">Date du 1er Album :</label>
+                        <input type="date"  id="f_album" name="first_album" value="27-02-2024" min="01-01-1960" max="31-12-2025">
+                    </div>
                     <input type="submit" id="button" value="Search">
                 </form>
             </div>
